--- a/htmls/index.html
+++ b/htmls/index.html
@@ -74,7 +74,7 @@
 	<script type="text/javascript">
 		$(document).ready(function(){
 			"use strict";
-			var ismobile = /Android|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)
+			var ismobile = /Android|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
 			if(!ismobile){
 				var viewportHeight= $(window).height();
 				if(viewportHeight>600){
