--- a/htmls/Experience.html
+++ b/htmls/Experience.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="interests">
-  	<head>
+      <head>
 	  	<title>Shivangi</title>
 	  	<meta charset="utf-8">
 	  	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -40,7 +40,7 @@
 			<div class="col-xs-10 col-sm-8 col-md-6 col-lg-4" id="underconstruction">
 				<center>
 					<p>Busy working on something awesome.
-					</br>Stay tuned!</p>
+					<br>Stay tuned!</p>
 
 					<div id="div1" class="fa"></div>
 				</center>
