--- a/htmls/Skills.html
+++ b/htmls/Skills.html
@@ -7,28 +7,9 @@
 	  	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	  	<link rel="stylesheet" href="../css/index.css" type="text/css">
 	</head>
-	<body id="skillsPage">
-		<nav class="navbar navbar-inverse">
-		  <div class="container-fluid">
-		    <div class="navbar-header">
-		      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-		        <span class="icon-bar"></span>
-		        <span class="icon-bar"></span>
-		        <span class="icon-bar"></span> 
-		      </button>
-		      <a class="navbar-brand" href="#">Shivangi</a>
-		    </div>
-		    <div class="collapse navbar-collapse" id="myNavbar">
-		      <ul class="nav navbar-nav">
-		        <li><a href="index.html">Home</a></li>
-		        <li><a href="Experience.html">Experience</a></li>
-		        <li class="active"><a href="Skills.html">Skills</a></li>
-		        <li><a href="Academics.html">Academics</a></li> 
-		        <li><a href="Interests.html">Interests</a></li> 
-		      </ul>
-		    </div>
-		  </div>
-		</nav>
+	<body class="SkillsPage">
+		<navigation-div>
+		</navigation-div>
 		
 		<div class="container-fluid" ng-controller="SkillController as skills">
 		<div class="row">
