--- a/htmls/Academics.html
+++ b/htmls/Academics.html
@@ -8,28 +8,9 @@
 	  	<link rel="stylesheet" href="../css/index.css" type="text/css">
 	  	
 	</head>
-	<body id="AcademicsPage">
-		<nav class="navbar navbar-inverse">
-		  <div class="container-fluid">
-		    <div class="navbar-header">
-		      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-		        <span class="icon-bar"></span>
-		        <span class="icon-bar"></span>
-		        <span class="icon-bar"></span> 
-		      </button>
-		      <a class="navbar-brand" href="#">Shivangi</a>
-		    </div>
-		    <div class="collapse navbar-collapse" id="myNavbar">
-		      <ul class="nav navbar-nav">
-		        <li><a href="index.html">Home</a></li>
-		        <li><a href="Experience.html">Experience</a></li>
-		        <li><a href="Skills.html">Skills</a></li> 
-		        <li class="active"><a href="Academics.html">Academics</a></li>
-		        <li><a href="Interests.html">Interests</a></li> 
-		      </ul>
-		    </div>
-		  </div>
-		</nav>
+	<body class="AcademicsPage">
+		<navigation-div>
+		</navigation-div>
 		
 		<div class="container-fluid">
 			<!-- not required on phone -->
