--- a/htmls/Experience.html
+++ b/htmls/Experience.html
@@ -6,34 +6,14 @@
 	  	<meta name="viewport" content="width=device-width, initial-scale=1">
 	  	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	  	<link rel="stylesheet" href="../css/index.css" type="text/css">
-	  	<link rel="stylesheet" href="../css/slideshow/colorbox.css" type="text/css">
 	  	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 	</head>
-	<body id="ExperiencePage">
-		<nav class="navbar navbar-inverse">
-		  <div class="container-fluid">
-		    <div class="navbar-header">
-		      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-		        <span class="icon-bar"></span>
-		        <span class="icon-bar"></span>
-		        <span class="icon-bar"></span> 
-		      </button>
-		      <a class="navbar-brand" href="#">Shivangi</a>
-		    </div>
-		    <div class="collapse navbar-collapse" id="myNavbar">
-		      <ul class="nav navbar-nav">
-		        <li><a href="index.html">Home</a></li>
-		        <li class="active"><a href="Experience.html">Experience</a></li>
-		        <li><a href="Skills.html">Skills</a></li> 
-		        <li><a href="Academics.html">Academics</a></li>
-		        <li><a href="Interests.html">Interests</a></li> 
-		      </ul>
-		    </div>
-		  </div>
-		</nav>
-		
+	<body class="ExperiencePage">
+		<navigation-div>
+		</navigation-div>		
 		<div class="container-fluid">
-		<div class="row" >
+		<!--  -->
+				<div class="row" >
 			<div class="col-xs-1 col-sm-2 col-md-3 col-lg-4">
 				<p></p>
 			</div>
@@ -50,8 +30,33 @@
 				<p></p>
 			</div>
 		</div>
+		<!--  -->
+		<div class="row" >
+			<div class="col-xs-1 col-sm-2 col-md-3 col-lg-4">
+				<p></p>
+			</div>
+			<div class="col-xs-10 col-sm-8 col-md-6 col-lg-4">
+					<div id="carousel"></div>
+					<a href="#" id="prev_btn">&laquo;</a>
+					<a href="#" id="next_btn">&raquo;</a>
+			</div>
+			<script id="experiencetpl" type="text/template">
+				{{#responsibility}}
+					<div class="responsibility">
+						<img src="images/{{shortname}}_sd.jpg" alt="Photo of {{name}}" />
+						<h3>{{name}}</h3>
+						<h4>{{skill}}</h4>
+						<p>{{achievement}}</p>
+					</div>
+				{{/responsibility}}
+			</script><!-- mustache script -->
+
+			<div class="col-xs-1 col-sm-2 col-md-3 col-lg-4">
+				<p></p>
+			</div>
+		</div><!-- row end -->
 		<div class="push"></div>
-		</div>
+		</div><!-- container-fluid -->
 		<footer class="container-fluid text-center" >
 		<footer-div></footer-div>	  		
 		</footer>
@@ -59,23 +64,44 @@
 	 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	 	<script type="text/javascript" src="../js/angular.min.js"></script>
 	 	<script type="text/javascript" src="../js/app.js"></script>
-	 	<script type="text/javascript" src="../js/jquery.colorbox-min.js"></script>
-	 	<script type="text/javascript" src="../js/common.js"></script>
-	 	<script type="text/javascript">
+	 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.cycle/3.0.3/jquery.cycle.all.min.js" type="text/javascript"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.3.0/mustache.min.js" type="text/javascript"></script>
+		<script type="text/javascript">
 	 		/*to be deleted*/
 	 		 function hourglass() {
- 		var a;
-	  	a = document.getElementById("div1");
-		  a.innerHTML = "&#xf251;";
-		  setTimeout(function () {
-		      a.innerHTML = "&#xf252;";
-		    }, 1000);
-		  setTimeout(function () {
-		      a.innerHTML = "&#xf253;";
-		    }, 2000);
-	}
-	hourglass();
-	setInterval(hourglass, 3000);
-	 	</script>
+		 		var a;
+			  	a = document.getElementById("div1");
+				  a.innerHTML = "&#xf251;";
+				  setTimeout(function () {
+				      a.innerHTML = "&#xf252;";
+				    }, 1000);
+				  setTimeout(function () {
+				      a.innerHTML = "&#xf253;";
+				    }, 2000);
+			}
+			hourglass();
+			setInterval(hourglass, 3000);
+	 /*to be deleted*/
+
+		$(function() {
+
+			$.getJSON('exp_data.json', function(data) {
+				var template = $('#experiencetpl').html();
+				var html = Mustache.to_html(template, data);
+				$('#carousel').html(html);
+				
+				$('#carousel').cycle({
+					fx: 'fade',
+					pause: 1,
+					next: '#next_btn',
+					prev: '#prev_btn',
+					speed: 500,
+					timeout: 10000
+				});
+			}); //getJSON
+			
+		}); //function
+
+</script>
 	</body>
 </html>
