--- a/htmls/index.html
+++ b/htmls/index.html
@@ -7,28 +7,9 @@
 	  	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	  	<link rel="stylesheet" href="../css/index.css" type="text/css">
 	</head>
-	<body>
-		<nav class="navbar navbar-inverse">
-		  <div class="container-fluid">
-		    <div class="navbar-header">
-		      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-		        <span class="icon-bar"></span>
-		        <span class="icon-bar"></span>
-		        <span class="icon-bar"></span> 
-		      </button>
-		      <a class="navbar-brand" href="#">Shivangi</a>
-		    </div>
-		    <div class="collapse navbar-collapse" id="myNavbar">
-		      <ul class="nav navbar-nav">
-		        <li class="active"><a href="#">Home</a></li>
-		        <li><a href="Experience.html">Experience</a></li>
-		        <li><a href="Skills.html">Skills</a></li> 
-		        <li><a href="Academics.html">Academics</a></li>
-		        <li><a href="Interests.html">Interests</a></li> 
-		      </ul>
-		    </div>
-		  </div>
-		</nav>
+	<body class="HomePage">
+		<navigation-div>
+		</navigation-div>
 		
 		<div class="container-fluid">
 		<!-- whitespace for lg screens -->
@@ -43,7 +24,7 @@
 			  	<p></p>
 			  </div>
 			  <div class="col-xs-8 col-sm-6 col-md-4 col-lg-4">
-				  	<p><img src="../image2.jpg" alt="Shivangi" class="img-circle img-thumbnail img-responsive" width="100%" height="100%"/></p>
+				  	<p><img src="../images/image2.jpg" alt="Shivangi" class="img-circle img-thumbnail img-responsive" width="100%" height="100%"/></p>
 			  </div>
 			  <div class="col-xs-2 col-sm-3 col-md-4 col-lg-4">
 			  	<p></p>
