--- a/htmls/Interests.html
+++ b/htmls/Interests.html
@@ -7,6 +7,7 @@
 	  	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	  	<link rel="stylesheet" href="../css/index.css" type="text/css">
 	 	<link rel="stylesheet" href="../css/slideshow/colorbox.css" type="text/css">
+	 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredoka+One">
 	</head>
 	<body class="InterestsPage" >
 		<navigation-div>
@@ -37,7 +38,7 @@
 				<p ng-show="interest.skill[0].showLevel">{{interest.skill[0].level}}</p>
 				<a href="{{interest.skill[0].images[1].full}}" class="gallery">
 				<img id="book1image" ng-src="{{interest.skill[0].images[0].full}}" class="img-responsive img-thumbnail" />
-				
+
 				</a>
 				<a href="{{interest.skill[0].images[2].full}}" class="gallery">
 				<!-- <img ng-src="{{interest.skill[0].images[1].full}}" class="img-responsive img-thumbnail"/> -->	
