--- a/htmls/navigation-div.html
+++ b/htmls/navigation-div.html
@@ -1,38 +1,34 @@
 <nav class="navbar navbar-inverse">
-		  <div class="container-fluid">
-		    <div class="navbar-header">
-		      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-		        <span class="icon-bar"></span>
-		        <span class="icon-bar"></span>
-		        <span class="icon-bar"></span> 
-		      </button>
-		      <a class="navbar-brand" href="#">Shivangi</a>
-		    </div>
-		    <div class="collapse navbar-collapse" id="myNavbar">
-		      <ul class="nav navbar-nav">
-		        <li><a href="index.html">Home</a></li>
-		        <li><a href="Experience.html">Experience</a></li>
-		        <li><a href="Skills.html">Skills</a></li> 
-		        <li><a href="Academics.html">Academics</a></li>
-		        <li><a href="Interests.html">Interests</a></li> 
-		      </ul>
-		    </div>
-		  </div>
-		</nav>
-	<script type="text/javascript">
-		  if($('body').hasClass('HomePage')){
-	        $('#myNavbar ul li:eq(0)').addClass('active');
-	    }
-	    else if($('body').hasClass('ExperiencePage')){
-	        $('#myNavbar ul li:eq(1)').addClass('active');
-	    }
-	    else if($('body').hasClass('SkillsPage')){
-	        $('#myNavbar ul li:eq(2)').addClass('active');
-	    }
-	    else if($('body').hasClass('AcademicsPage')){
-	        $('#myNavbar ul li:eq(3)').addClass('active');
-	    }
-	    else if($('body').hasClass('InterestsPage')){
-	        $('#myNavbar ul li:eq(4)').addClass('active');
-	    }
-	</script>
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Shivangi</a>
+        </div>
+        <div class="collapse navbar-collapse" id="myNavbar">
+            <ul class="nav navbar-nav">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="Experience.html">Experience</a></li>
+                <li><a href="Skills.html">Skills</a></li>
+                <li><a href="Academics.html">Academics</a></li>
+                <li><a href="Interests.html">Interests</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<script type="text/javascript">
+    if ($('body').hasClass('HomePage')) {
+        $('#myNavbar ul li:eq(0)').addClass('active');
+    } else if ($('body').hasClass('ExperiencePage')) {
+        $('#myNavbar ul li:eq(1)').addClass('active');
+    } else if ($('body').hasClass('SkillsPage')) {
+        $('#myNavbar ul li:eq(2)').addClass('active');
+    } else if ($('body').hasClass('AcademicsPage')) {
+        $('#myNavbar ul li:eq(3)').addClass('active');
+    } else if ($('body').hasClass('InterestsPage')) {
+        $('#myNavbar ul li:eq(4)').addClass('active');
+    }
+</script>
