--- a/htmls/Experience.html
+++ b/htmls/Experience.html
@@ -1,107 +1,79 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="interests">
-      <head>
-	  	<title>Shivangi</title>
-	  	<meta charset="utf-8">
-	  	<meta name="viewport" content="width=device-width, initial-scale=1">
-	  	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	  	<link rel="stylesheet" href="../css/index.css" type="text/css">
-	  	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
-	</head>
-	<body class="ExperiencePage">
-		<navigation-div>
-		</navigation-div>		
-		<div class="container-fluid">
-		<!--  -->
-				<div class="row" >
-			<div class="col-xs-1 col-sm-2 col-md-3 col-lg-4">
-				<p></p>
-			</div>
-			<div class="col-xs-10 col-sm-8 col-md-6 col-lg-4" id="underconstruction">
-				<center>
-					<p>Busy working on something awesome.
-					<br>Stay tuned!</p>
 
-					<div id="div1" class="fa"></div>
-				</center>
+<head>
+    <title>Shivangi</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/index.css" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+</head>
 
-			</div>
-			<div class="col-xs-1 col-sm-2 col-md-3 col-lg-4">
-				<p></p>
-			</div>
-		</div>
-		<!--  -->
-		<div class="row" >
-			<div class="col-xs-1 col-sm-2 col-md-3 col-lg-4">
-				<p></p>
-			</div>
-			<div class="col-xs-10 col-sm-8 col-md-6 col-lg-4">
-					<div id="carousel"></div>
-					<a href="#" id="prev_btn">&laquo;</a>
-					<a href="#" id="next_btn">&raquo;</a>
-			</div>
-			<script id="experiencetpl" type="text/template">
-				{{#responsibility}}
-					<div class="responsibility">
-						<img src="images/{{shortname}}_sd.jpg" alt="Photo of {{name}}" />
-						<h3>{{name}}</h3>
-						<h4>{{skill}}</h4>
-						<p>{{achievement}}</p>
-					</div>
-				{{/responsibility}}
-			</script><!-- mustache script -->
+<body class="ExperiencePage">
+    <navigation-div>
+    </navigation-div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xs-1 col-sm-2 col-md-3 col-lg-4">
+                <p></p>
+            </div>
+            <div class="col-xs-10 col-sm-8 col-md-6 col-lg-4" id="experienceBox">
+                <div id="carousel"></div>
+                <center>
+                    <i id="prev_btn" class="fa fa-2x fa-chevron-left fa-pull-left fa-border" aria-hidden="true"></i>
+                    <i id="next_btn" class="fa fa-2x fa-chevron-right fa-pull-right fa-border" aria-hidden="true"></i>
+                </center>
+            </div>
+            <script id="experiencetpl" type="text/template">
+                {{#responsibility}}
+                <div class="responsibility">
+                    <img src="images/{{shortname}}_sd.jpg" alt="Photo of {{name}}" />
+                    <h3>{{name}}</h3>
+                    <h4>{{skill}}</h4>
+                    <p>{{achievement}}</p>
+                </div>
+                {{/responsibility}}
+            </script>
+            <!-- mustache script -->
 
-			<div class="col-xs-1 col-sm-2 col-md-3 col-lg-4">
-				<p></p>
-			</div>
-		</div><!-- row end -->
-		<div class="push"></div>
-		</div><!-- container-fluid -->
-		<footer class="container-fluid text-center" >
-		<footer-div></footer-div>	  		
-		</footer>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-	 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	 	<script type="text/javascript" src="../js/angular.min.js"></script>
-	 	<script type="text/javascript" src="../js/app.js"></script>
-	 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.cycle/3.0.3/jquery.cycle.all.min.js" type="text/javascript"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.3.0/mustache.min.js" type="text/javascript"></script>
-		<script type="text/javascript">
-	 		/*to be deleted*/
-	 		 function hourglass() {
-		 		var a;
-			  	a = document.getElementById("div1");
-				  a.innerHTML = "&#xf251;";
-				  setTimeout(function () {
-				      a.innerHTML = "&#xf252;";
-				    }, 1000);
-				  setTimeout(function () {
-				      a.innerHTML = "&#xf253;";
-				    }, 2000);
-			}
-			hourglass();
-			setInterval(hourglass, 3000);
-	 /*to be deleted*/
+            <div class="col-xs-1 col-sm-2 col-md-3 col-lg-4">
+                <p></p>
+            </div>
+        </div>
+        <!-- row end -->
+    </div>
+    <!-- container-fluid -->
+    <div class="push"></div>
+    <footer class="container-fluid text-center">
+        <footer-div></footer-div>
+    </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="../js/angular.min.js"></script>
+    <script type="text/javascript" src="../js/app.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.cycle/3.0.3/jquery.cycle.all.min.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.3.0/mustache.min.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        $(function() {
 
-		$(function() {
+            $.getJSON('exp_data.json', function(data) {
+                var template = $('#experiencetpl').html();
+                var html = Mustache.to_html(template, data);
+                $('#carousel').html(html);
 
-			$.getJSON('exp_data.json', function(data) {
-				var template = $('#experiencetpl').html();
-				var html = Mustache.to_html(template, data);
-				$('#carousel').html(html);
-				
-				$('#carousel').cycle({
-					fx: 'fade',
-					pause: 1,
-					next: '#next_btn',
-					prev: '#prev_btn',
-					speed: 500,
-					timeout: 10000
-				});
-			}); //getJSON
-			
-		}); //function
+                $('#carousel').cycle({
+                    fx: 'fade',
+                    pause: 1,
+                    next: '#next_btn',
+                    prev: '#prev_btn',
+                    speed: 700,
+                    timeout: 14000
+                });
+            }); //getJSON
 
-</script>
-	</body>
+        }); //function
+    </script>
+</body>
+
 </html>
