--- a/htmls/Interests.html
+++ b/htmls/Interests.html
@@ -1,88 +1,126 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="interests">
-      <head>
-	  	<title>Shivangi</title>
-	  	<meta charset="utf-8">
-	  	<meta name="viewport" content="width=device-width, initial-scale=1">
-	  	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	  	<link rel="stylesheet" href="../css/index.css" type="text/css">
-	 	<link rel="stylesheet" href="../css/slideshow/colorbox.css" type="text/css">
-	 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredoka+One">
-	</head>
-	<body class="InterestsPage" >
-		<navigation-div>
-		</navigation-div>
-		
-		<div class="container-fluid" ng-controller="StoreInterests as interest">
-		<div class="row"  >
-		<div class="col-xs-0 col-sm-2 col-md-3 col-lg-3">
-		<p></p>
-		</div>
-		<div class="col-xs-12 col-sm-8 col-md-6 col-lg-6">
-		<section ng-controller="PanelController as panel" >
-			<ul class="nav nav-pills">
-				<li ng-class="{active: panel.isSelected(1)}">
-					<a href ng-click="panel.selectTab(1)">{{interest.skill[0].name}}</a>
-				</li>
-				<li ng-class="{active:panel.isSelected(2)}">
-					<a href ng-click="panel.selectTab(2)">{{interest.skill[1].name}}</a>
-				</li>
-				<li ng-class="{active:panel.isSelected(3)}">
-					<a href ng-click="panel.selectTab(3)">{{interest.skill[2].name}}</a>
-				</li>
-			</ul>
-		<div class="panel"  ng-show="panel.isSelected(1)">
-			<div class="col-md-12" >
-				<b><p class="description">{{interest.skill[0].description}}</p></b>
-				<p class="description">{{interest.skill[0].description1}}</p>
-				<p ng-show="interest.skill[0].showLevel">{{interest.skill[0].level}}</p>
-				<a href="{{interest.skill[0].images[1].full}}" class="gallery">
-				<img id="book1image" ng-src="{{interest.skill[0].images[0].full}}" class="img-responsive img-thumbnail" />
 
-				</a>
-				<a href="{{interest.skill[0].images[2].full}}" class="gallery">
-				<!-- <img ng-src="{{interest.skill[0].images[1].full}}" class="img-responsive img-thumbnail"/> -->	
-				</a>
-				<a href="{{interest.skill[0].images[0].full}}" class="gallery">
-				<!-- <img ng-src="{{interest.skill[0].images[2].full}}" class="img-responsive img-thumbnail"/> -->
-					
-				</a>
-				<div id="booksSlideShow">Click to Start Slideshow!</div>
-			</div>
-		</div>
+<head>
+    <title>Shivangi</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/index.css" type="text/css">
+    <link rel="stylesheet" href="../css/slideshow/colorbox.css" type="text/css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredoka+One">
+</head>
 
-		<div class="panel"  ng-show="panel.isSelected(2)">
-			<div class="col-md-12" >
-				<b><p class="description">{{interest.skill[1].description}}</p></b>
-				<p ng-show="interest.skill[1].showLevel">{{interest.skill[1].level}}</p>
-				<img ng-src="{{interest.skill[1].images[0].full}}" class="img-responsive img-thumbnail"/>
-			</div>
-		</div>
-		
-		<div class="panel"  ng-show="panel.isSelected(3)">
-			<div class="col-md-12" >
-				<b><p class="description">{{interest.skill[2].description}}</p></b>
-				<p ng-show="interest.skill[2].showLevel">{{interest.skill[2].level}}</p>
-				<img ng-src="{{interest.skill[2].images[0].full}}" class="img-responsive img-thumbnail" title="{{interest.skill[2].name}}" />
-			</div>
-		</div>
-		</section>
-		</div>
-		<div class="col-xs-0 col-sm-2 col-md-3 col-lg-3">
-		<p></p>
-		</div>
-		</div>
-		</div>
-		<div class="push"></div>	
-		
-		<footer class="container-fluid text-center">
-	  		<footer-div></footer-div>
-		</footer>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-	 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	 	<script type="text/javascript" src="../js/angular.min.js"></script>
-	 	<script type="text/javascript" src="../js/app.js"></script>
-		<script type="text/javascript" src="../js/jquery.colorbox-min.js"></script>
-		<script type="text/javascript" src="../js/common.js"></script>
-	</body>
+<body class="InterestsPage">
+    <navigation-div>
+    </navigation-div>
+
+    <div class="container-fluid" ng-controller="StoreInterests as interest">
+        <div class="row">
+            <div class="col-xs-0 col-sm-2 col-md-3 col-lg-3">
+                <p></p>
+            </div>
+            <div class="col-xs-12 col-sm-8 col-md-6 col-lg-6">
+                <section ng-controller="PanelController as panel">
+                    <ul class="nav nav-pills">
+                        <li ng-class="{active: panel.isSelected(1)}">
+                            <a href ng-click="panel.selectTab(1)">{{interest.skill[0].name}}</a>
+                        </li>
+                        <li ng-class="{active:panel.isSelected(2)}">
+                            <a href ng-click="panel.selectTab(2)">{{interest.skill[1].name}}</a>
+                        </li>
+                        <li ng-class="{active:panel.isSelected(3)}">
+                            <a href ng-click="panel.selectTab(3)">{{interest.skill[2].name}}</a>
+                        </li>
+                    </ul>
+                    <div class="panel" ng-show="panel.isSelected(1)">
+                        <div class="col-md-12">
+
+                            <strong> <p class="description">{{interest.skill[0].description}}</p></strong>
+                            <p ng-show="interest.skill[0].showLevel">{{interest.skill[0].level}}</p>
+
+                            <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                                <!-- Indicators -->
+                                <ol class="carousel-indicators">
+                                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                                    <li data-target="#myCarousel" data-slide-to="1"></li>
+                                    <li data-target="#myCarousel" data-slide-to="2"></li>
+                                </ol>
+
+                                <!-- Wrapper for slides -->
+                                <div class="carousel-inner" role="listbox">
+                                    <div class="item active">
+                                        <img src="{{interest.skill[0].images[0].full}}" alt="Books" class="img-responsive img-thumbnail">
+                                        <div class="carousel-caption">
+                                            <p class="description">{{interest.skill[0].description1}}</p>
+                                        </div>
+                                    </div>
+
+                                    <div class="item">
+                                        <img src="{{interest.skill[0].images[1].full}}" alt="Books" class="img-responsive img-thumbnail">
+                                        <div class="carousel-caption">
+                                            <p class="description">{{interest.skill[0].description2}}</p>
+                                        </div>
+                                    </div>
+
+                                    <div class="item">
+                                        <img src="{{interest.skill[0].images[2].full}}" alt="Books" class="img-responsive img-thumbnail">
+                                        <div class="carousel-caption">
+                                            <p class="description">{{interest.skill[0].description3}}</p>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!-- Left and right controls -->
+                                <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                            </div>
+                            <!-- carousel -->
+
+                        </div>
+                        <!-- col-12 -->
+                    </div>
+                    <!-- panel -->
+
+                    <div class="panel" ng-show="panel.isSelected(2)">
+                        <div class="col-md-12">
+                            <b><p class="description">{{interest.skill[1].description}}</p></b>
+                            <p ng-show="interest.skill[1].showLevel">{{interest.skill[1].level}}</p>
+                            <img ng-src="{{interest.skill[1].images[0].full}}" class="img-responsive img-thumbnail" />
+                        </div>
+                    </div>
+
+                    <div class="panel" ng-show="panel.isSelected(3)">
+                        <div class="col-md-12">
+                            <b><p class="description">{{interest.skill[2].description}}</p></b>
+                            <p ng-show="interest.skill[2].showLevel">{{interest.skill[2].level}}</p>
+                            <img ng-src="{{interest.skill[2].images[0].full}}" class="img-responsive img-thumbnail" title="{{interest.skill[2].name}}" />
+                        </div>
+                    </div>
+                </section>
+            </div>
+            <div class="col-xs-0 col-sm-2 col-md-3 col-lg-3">
+                <p></p>
+            </div>
+        </div>
+    </div>
+    <div class="push"></div>
+
+    <footer class="container-fluid text-center">
+        <footer-div></footer-div>
+    </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="../js/angular.min.js"></script>
+    <script type="text/javascript" src="../js/app.js"></script>
+    <script type="text/javascript" src="../js/jquery.colorbox-min.js"></script>
+    <script type="text/javascript" src="../js/common.js"></script>
+</body>
+
 </html>
