--- a/htmls/Experience.html
+++ b/htmls/Experience.html
@@ -11,8 +11,10 @@
 </head>
 
 <body class="ExperiencePage">
+    <nav class="navbar navbar-inverse">
     <navigation-div>
     </navigation-div>
+    </nav>
     <div class="container-fluid">
         <div class="row">
             <div class="col-xs-1 col-sm-2 col-md-3 col-lg-4">
@@ -67,8 +69,8 @@
                     pause: 1,
                     next: '#next_btn',
                     prev: '#prev_btn',
-                    speed: 700,
-                    timeout: 14000
+                    speed: 500,
+                    timeout: 10000
                 });
             }); //getJSON
 
