--- a/htmls/Interests.html
+++ b/htmls/Interests.html
@@ -12,8 +12,11 @@
 </head>
 
 <body class="InterestsPage">
+
+    <nav class="navbar navbar-inverse">
     <navigation-div>
     </navigation-div>
+    </nav>
 
     <div class="container-fluid" ng-controller="StoreInterests as interest">
         <div class="row">
