--- a/htmls/Skills.html
+++ b/htmls/Skills.html
@@ -10,8 +10,10 @@
 </head>
 
 <body class="SkillsPage">
+    <nav class="navbar navbar-inverse">
     <navigation-div>
     </navigation-div>
+    </nav>
 
     <div class="container-fluid" ng-controller="SkillController as skills">
         <div class="row">
