--- a/htmls/index.html
+++ b/htmls/index.html
@@ -10,8 +10,10 @@
 </head>
 
 <body class="HomePage">
+    <nav class="navbar navbar-inverse">
     <navigation-div>
     </navigation-div>
+    </nav>
 
     <div class="container-fluid">
         <!-- whitespace for lg screens -->
