--- a/htmls/footer-div.html
+++ b/htmls/footer-div.html
@@ -4,12 +4,18 @@
     </div>
     <div class="col-xs-12 col-sm-6 col-md-4">
         <p class=" for-copyright-alignment">
-            Copyright&nbsp;<span class="glyphicon glyphicon-copyright-mark"></span>&nbsp; Shivangi Das
+            <span>Copyright</span>&nbsp;<span class="glyphicon glyphicon-copyright-mark"></span>&nbsp;
+            <span>Shivangi Das</span>
         </p>
     </div>
     <div class="col-md-4 col-sm-6 col-xs-12">
         <p class=" for-phone-alignment">
-            <span class="glyphicon glyphicon-envelope"></span>&nbsp; catchshivangi@gmail.com
+            <span class="glyphicon glyphicon-envelope"></span>&nbsp;
+            <a id="emailIdLink" href="mailto:catchshivangi@gmail.com" target="_top">
+            <span data-toggle="tooltip" title="Drop me an email!">
+            catchshivangi@gmail.com
+            </span>
+            </a>
         </p>
     </div>
     <div class="col-md-2">
