--- a/htmls/Skills.html
+++ b/htmls/Skills.html
@@ -10,9 +10,10 @@
 </head>
 
 <body class="SkillsPage">
+    <nav class="navbar navbar-inverse">
     <navigation-div>
     </navigation-div>
-
+    </nav>
     <div class="container-fluid" ng-controller="SkillController as skills">
         <div class="row">
             <div class="col-md-12 skillsHeader">
@@ -208,11 +209,6 @@
 
             <!--  -->
             <div class="skillsPadding">
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <h3><center></center></h3>
             </div>
         </div>
         <div class="push"></div>
