--- a/htmls/footer-div.html
+++ b/htmls/footer-div.html
@@ -1,15 +1,27 @@
+    <div class="footnote">
+        <center>
+            <img src="../images/image1.png" alt="Shivangi"  class="img-circle img-responsive" />
+            <article>Front End Web Developer. <a href="mailto:catchshivangi@gmail.com">Hire me</a></article>
+        </center>
+    </div>
 <div class="row">
     <div class="col-md-2">
         <p></p>
     </div>
     <div class="col-xs-12 col-sm-6 col-md-4">
         <p class=" for-copyright-alignment">
-            Copyright&nbsp;<span class="glyphicon glyphicon-copyright-mark"></span>&nbsp; Shivangi Das
+            <span>Copyright</span>&nbsp;<span class="glyphicon glyphicon-copyright-mark"></span>&nbsp;
+            <span>Shivangi Das</span>
         </p>
     </div>
     <div class="col-md-4 col-sm-6 col-xs-12">
         <p class=" for-phone-alignment">
-            <span class="glyphicon glyphicon-envelope"></span>&nbsp; catchshivangi@gmail.com
+            <span class="glyphicon glyphicon-envelope"></span>&nbsp;
+            <a id="emailIdLink" href="mailto:catchshivangi@gmail.com" target="_top">
+            <span data-toggle="tooltip" title="Drop me an email!">
+            catchshivangi@gmail.com
+            </span>
+            </a>
         </p>
     </div>
     <div class="col-md-2">
