--- a/htmls/Experience.html
+++ b/htmls/Experience.html
@@ -11,8 +11,10 @@
 </head>
 
 <body class="ExperiencePage">
+    <nav class="navbar navbar-inverse">
     <navigation-div>
     </navigation-div>
+    </nav>
     <div class="container-fluid">
         <div class="row">
             <div class="col-xs-1 col-sm-2 col-md-3 col-lg-4">
@@ -21,8 +23,8 @@
             <div class="col-xs-10 col-sm-8 col-md-6 col-lg-4" id="experienceBox">
                 <div id="carousel"></div>
                 <center>
-                    <i id="prev_btn" class="fa fa-2x fa-chevron-left fa-pull-left fa-border" aria-hidden="true"></i>
-                    <i id="next_btn" class="fa fa-2x fa-chevron-right fa-pull-right fa-border" aria-hidden="true"></i>
+                    <i id="prev_btn" class="fa fa-2x fa-chevron-left fa-pull-left" aria-hidden="true"></i>
+                    <i id="next_btn" class="fa fa-2x fa-chevron-right fa-pull-right" aria-hidden="true"></i>
                 </center>
             </div>
             <script id="experiencetpl" type="text/template">
@@ -45,6 +47,7 @@
     </div>
     <!-- container-fluid -->
     <div class="push"></div>
+
     <footer class="container-fluid text-center">
         <footer-div></footer-div>
     </footer>
@@ -56,7 +59,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.3.0/mustache.min.js" type="text/javascript"></script>
     <script type="text/javascript">
         $(function() {
-
+            /*var viewportHeight=$(window).height();
+            $('#carousel').css('height',viewportHeight-170);*/
             $.getJSON('exp_data.json', function(data) {
                 var template = $('#experiencetpl').html();
                 var html = Mustache.to_html(template, data);
@@ -67,8 +71,8 @@
                     pause: 1,
                     next: '#next_btn',
                     prev: '#prev_btn',
-                    speed: 700,
-                    timeout: 14000
+                    speed: 500,
+                    timeout: 10000
                 });
             }); //getJSON
 
