--- a/htmls/Interests.html
+++ b/htmls/Interests.html
@@ -12,9 +12,11 @@
 </head>
 
 <body class="InterestsPage">
+
+    <nav class="navbar navbar-inverse">
     <navigation-div>
     </navigation-div>
-
+    </nav>
     <div class="container-fluid" ng-controller="StoreInterests as interest">
         <div class="row">
             <div class="col-xs-0 col-sm-2 col-md-3 col-lg-3">
