--- a/htmls/index.html
+++ b/htmls/index.html
@@ -10,8 +10,10 @@
 </head>
 
 <body class="HomePage">
+    <nav class="navbar navbar-inverse">
     <navigation-div>
     </navigation-div>
+    </nav>
 
     <div class="container-fluid">
         <!-- whitespace for lg screens -->
@@ -44,7 +46,7 @@
             </div>
         </div>
     </div>
-    <footer class="container-fluid text-center">
+    <footer class=" text-center">
         <footer-div></footer-div>
     </footer>
 </body>
