--- a/htmls/AboutMe.html
+++ b/htmls/AboutMe.html
@@ -9,37 +9,31 @@
     <link rel="stylesheet" href="../css/index.css" type="text/css">
 </head>
 
-<body class="HomePage">
+<body class="AboutMePage">
     <nav class="navbar navbar-inverse navbar-fixed-top">
     <navigation-div>
     </navigation-div>
     </nav>
 
     <div class="container-fluid" style="padding-top:1em;">
-        <!-- My picture -->
-        <div class="row " id="pictureDiv">
-            <div class="col-xs-2 col-sm-3 col-md-4 col-lg-4">
-                <p></p>
-            </div>
-            <div class="col-xs-8 col-sm-6 col-md-4 col-lg-4">
-                <p><img src="../images/image2.jpg" alt="Shivangi" class="img-circle img-thumbnail img-responsive" width="100%" height="100%" /></p>
-            </div>
-            <div class="col-xs-2 col-sm-3 col-md-4 col-lg-4">
-                <p></p>
-            </div>
+        <div class="row">
+        <div class="col-xs-4">
+            <img src="../images/image1.png" alt="Shivangi" width="100px" class="img-responsive img-rounded" style="float:right;">
         </div>
-
-        <div class="row JumbotronPara">
-            <div class="col-xs-12 col-sm-12 col-md-12">
-
-                <div class="jumbotron">
-                    <h2><center>Shivangi Das</center></h2>
-                    <h5><center><p>Web Developer&nbsp;&middot;&nbsp;Avid Reader&nbsp;&middot;&nbsp;Aspiring Writer</p></center></h5>
-                </div>
-
-            </div>
+        <div class="col-xs-8">
+                <p>Hi! <br> I am a Front End Web Developer. I enjoy creating responsive sites.<br>
+                This site is the result of teaching myself UX/UI after work hours and before sleep. (A big shout-out to all the courses available online!)
+                <br>Creating a website out of my resume has been an extremely enjoyable process. Even now it is a lot of fun since I add/change/play with the elements as I learn new tricks everyday.</p>
+                <p>
+                If you like this idea, drop me an email at <a href="mailto:catchshivangi@gmail.com" target="_top">catchshivangi@gmail.com</a></p>
+                <p>You can also find <a href="https://drive.google.com/open?id=0ByRL2lCvi9KQdmtpVFJUaUJ2UUk" target="_blank">my standard, pdf-based resume here.</a></p>
+                <p>I'm currently based in Bangalore, India. Available for challenging projects.</p>
+             
         </div>
-    </div>
+       
+        </div><!-- row -->
+    </div><!-- container-fluid -->
+
     <div class="push">        
     </div>
     <footer class="container-fluid" text-center">
