--- a/htmls/Interests.html
+++ b/htmls/Interests.html
@@ -12,10 +12,12 @@
 </head>
 
 <body class="InterestsPage">
+
+    <nav class="navbar navbar-inverse navbar-fixed-top">
     <navigation-div>
     </navigation-div>
-
-    <div class="container-fluid" ng-controller="StoreInterests as interest">
+    </nav>
+    <div class="container-fluid" style="padding-top:1em; padding-bottom:1em;" ng-controller="StoreInterests as interest">
         <div class="row">
             <div class="col-xs-0 col-sm-2 col-md-3 col-lg-3">
                 <p></p>
