--- a/htmls/alternateIndex.html
+++ b/htmls/alternateIndex.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="HomePage">
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-inverse">
     <navigation-div>
     </navigation-div>
     </nav>
