--- a/htmls/Experience.html
+++ b/htmls/Experience.html
@@ -7,13 +7,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/index.css" type="text/css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 </head>
 
 <body class="ExperiencePage">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
     <navigation-div>
     </navigation-div>
-    <div class="container-fluid">
+    </nav>
+    <div class="container-fluid" style="padding-top:1em; padding-bottom:1em;">
+        <div class="row">
+            <div class="col-xs-12">
+                <center>
+                    <h3>
+                    Experience in TATA Consultancy Services Ltd.
+                    </h3>
+                    <h4>Project: Wealth Management for a bank in Israel.</h4>
+                </center>
+            </div>
+        </div>
         <div class="row">
             <div class="col-xs-1 col-sm-2 col-md-3 col-lg-4">
                 <p></p>
@@ -21,14 +32,14 @@
             <div class="col-xs-10 col-sm-8 col-md-6 col-lg-4" id="experienceBox">
                 <div id="carousel"></div>
                 <center>
-                    <i id="prev_btn" class="fa fa-2x fa-chevron-left fa-pull-left fa-border" aria-hidden="true"></i>
-                    <i id="next_btn" class="fa fa-2x fa-chevron-right fa-pull-right fa-border" aria-hidden="true"></i>
+                    <i id="prev_btn" class="fa fa-2x fa-chevron-left fa-pull-left" aria-hidden="true"></i>
+                    <i id="next_btn" class="fa fa-2x fa-chevron-right fa-pull-right" aria-hidden="true"></i>
                 </center>
             </div>
             <script id="experiencetpl" type="text/template">
                 {{#responsibility}}
                 <div class="responsibility">
-                    <img src="images/{{shortname}}_sd.jpg" alt="Photo of {{name}}" />
+                    <!-- <img src="images/{{shortname}}_sd.jpg" alt="Photo of {{name}}" /> -->
                     <h3>{{name}}</h3>
                     <h4>{{skill}}</h4>
                     <p>{{achievement}}</p>
@@ -45,6 +56,7 @@
     </div>
     <!-- container-fluid -->
     <div class="push"></div>
+
     <footer class="container-fluid text-center">
         <footer-div></footer-div>
     </footer>
@@ -56,7 +68,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.3.0/mustache.min.js" type="text/javascript"></script>
     <script type="text/javascript">
         $(function() {
-
+            /*var viewportHeight=$(window).height();
+            $('#carousel').css('height',viewportHeight-170);*/
             $.getJSON('exp_data.json', function(data) {
                 var template = $('#experiencetpl').html();
                 var html = Mustache.to_html(template, data);
@@ -67,8 +80,8 @@
                     pause: 1,
                     next: '#next_btn',
                     prev: '#prev_btn',
-                    speed: 700,
-                    timeout: 14000
+                    speed: 500,
+                    timeout: 10000
                 });
             }); //getJSON
 
