--- a/htmls/Skills.html
+++ b/htmls/Skills.html
@@ -10,9 +10,10 @@
 </head>
 
 <body class="SkillsPage">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
     <navigation-div>
     </navigation-div>
-
+    </nav>
     <div class="container-fluid" ng-controller="SkillController as skills">
         <div class="row">
             <div class="col-md-12 skillsHeader">
@@ -32,8 +33,8 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-8 col-xs-5">
-                    <div class="progress">
-                        <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="{{skills.skill[0].level}}" aria-valuemin="0" aria-valuemax="100" style="width:{{skills.skill[0].level}}%" data-toggle="tooltip" title="{{skills.skill[0].description}}">
+                    <div class="progress" data-toggle="tooltip" title="{{skills.skill[0].description}}">
+                        <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="{{skills.skill[0].level}}" aria-valuemin="0" aria-valuemax="100" style="width:{{skills.skill[0].level}}%" >
                             <!-- 50% -->
                         </div>
                     </div>
@@ -53,8 +54,8 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-8 col-xs-5">
-                    <div class="progress">
-                        <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="{{skills.skill[0].level}}" aria-valuemin="0" aria-valuemax="100" style="width:{{skills.skill[1].level}}%;" data-toggle="tooltip" title="{{skills.skill[1].description}}">
+                    <div class="progress" data-toggle="tooltip" title="{{skills.skill[1].description}}">
+                        <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="{{skills.skill[0].level}}" aria-valuemin="0" aria-valuemax="100" style="width:{{skills.skill[1].level}}%;">
                             <!-- 60% -->
                         </div>
                     </div>
@@ -80,8 +81,8 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-8 col-xs-5">
-                    <div class="progress">
-                        <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="{{skills.skill[2].level}}" aria-valuemin="0" aria-valuemax="100" style="width:{{skills.skill[2].level}}%" data-toggle="tooltip" title="{{skills.skill[2].description}}">
+                    <div class="progress" data-toggle="tooltip" title="{{skills.skill[2].description}}">
+                        <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="{{skills.skill[2].level}}" aria-valuemin="0" aria-valuemax="100" style="width:{{skills.skill[2].level}}%" >
                             <!-- 90% -->
                         </div>
                     </div>
@@ -101,8 +102,8 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-8 col-xs-5">
-                    <div class="progress">
-                        <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="{{skills.skill[3].level}}" aria-valuemin="0" aria-valuemax="100" style="width:{{skills.skill[3].level}}%" data-toggle="tooltip" title="{{skills.skill[3].description}}">
+                    <div class="progress" data-toggle="tooltip" title="{{skills.skill[3].description}}">
+                        <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="{{skills.skill[3].level}}" aria-valuemin="0" aria-valuemax="100" style="width:{{skills.skill[3].level}}%" >
                             <!-- 90% -->
                         </div>
                     </div>
@@ -127,8 +128,8 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-8 col-xs-5">
-                    <div class="progress">
-                        <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="{{skills.skill[4].level}}" aria-valuemin="0" aria-valuemax="100" style="width:{{skills.skill[4].level}}%" data-toggle="tooltip" title="{{skills.skill[4].description}}">
+                    <div class="progress" data-toggle="tooltip" title="{{skills.skill[4].description}}">
+                        <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="{{skills.skill[4].level}}" aria-valuemin="0" aria-valuemax="100" style="width:{{skills.skill[4].level}}%" >
                             <!-- 70% -->
                         </div>
                     </div>
@@ -148,8 +149,8 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-8 col-xs-5">
-                    <div class="progress">
-                        <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="{{skills.skill[6].level}}" aria-valuemin="0" aria-valuemax="100" style="width:{{skills.skill[6].level}}%" data-toggle="tooltip" title="{{skills.skill[6].description}}">
+                    <div class="progress" data-toggle="tooltip" title="{{skills.skill[6].description}}">
+                        <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="{{skills.skill[6].level}}" aria-valuemin="0" aria-valuemax="100" style="width:{{skills.skill[6].level}}%" >
                             <!-- 100% -->
                         </div>
                     </div>
@@ -174,8 +175,8 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-8 col-xs-5">
-                    <div class="progress">
-                        <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="{{skills.skill[5].level}}" aria-valuemin="0" aria-valuemax="100" style="width:{{skills.skill[5].level}}%" data-toggle="tooltip" title="{{skills.skill[5].description}}">
+                    <div class="progress" data-toggle="tooltip" title="{{skills.skill[5].description}}">
+                        <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="{{skills.skill[5].level}}" aria-valuemin="0" aria-valuemax="100" style="width:{{skills.skill[5].level}}%" >
                             <!-- 100% -->
                         </div>
                     </div>
@@ -195,8 +196,8 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-8 col-xs-5">
-                    <div class="progress">
-                        <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="{{skills.skill[7].level}}" aria-valuemin="0" aria-valuemax="100" style="width:{{skills.skill[7].level}}%" data-toggle="tooltip" title="{{skills.skill[7].description}}">
+                    <div class="progress" data-toggle="tooltip" title="{{skills.skill[7].description}}">
+                        <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="{{skills.skill[7].level}}" aria-valuemin="0" aria-valuemax="100" style="width:{{skills.skill[7].level}}%" >
                             <!-- 100% -->
                         </div>
                     </div>
@@ -210,14 +211,9 @@
             <div class="skillsPadding">
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-12">
-                <h3><center></center></h3>
-            </div>
-        </div>
-        <div class="push"></div>
+       
     </div>
-
+     <div class="push"></div>
     <footer class="container-fluid text-center">
         <footer-div></footer-div>
     </footer>
