--- a/htmls/navigation-div.html
+++ b/htmls/navigation-div.html
@@ -1,4 +1,3 @@
-<nav class="navbar navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -6,7 +5,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Shivangi</a>
+            <a class="navbar-brand" href="index.html">Shivangi</a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
@@ -18,17 +17,20 @@
             </ul>
         </div>
     </div>
-</nav>
+
 <script type="text/javascript">
-    if ($('body').hasClass('HomePage')) {
-        $('#myNavbar ul li:eq(0)').addClass('active');
-    } else if ($('body').hasClass('ExperiencePage')) {
-        $('#myNavbar ul li:eq(1)').addClass('active');
-    } else if ($('body').hasClass('SkillsPage')) {
-        $('#myNavbar ul li:eq(2)').addClass('active');
-    } else if ($('body').hasClass('AcademicsPage')) {
-        $('#myNavbar ul li:eq(3)').addClass('active');
-    } else if ($('body').hasClass('InterestsPage')) {
-        $('#myNavbar ul li:eq(4)').addClass('active');
-    }
+    $(document).ready(function(){
+        if ($('body').hasClass('HomePage')) {
+            $('#myNavbar ul li:eq(0)').addClass('active');
+        } else if ($('body').hasClass('ExperiencePage')) {
+            $('#myNavbar ul li:eq(1)').addClass('active');
+        } else if ($('body').hasClass('SkillsPage')) {
+            $('#myNavbar ul li:eq(2)').addClass('active');
+        } else if ($('body').hasClass('AcademicsPage')) {
+            $('#myNavbar ul li:eq(3)').addClass('active');
+        } else if ($('body').hasClass('InterestsPage')) {
+            $('#myNavbar ul li:eq(4)').addClass('active');
+        }
+    });
+
 </script>
