--- a/htmls/index.html
+++ b/htmls/index.html
@@ -15,32 +15,20 @@
     </navigation-div>
     </nav>
 
-    <div class="container-fluid" style="padding-top:1em;">
-        <!-- My picture -->
-        <div class="row " id="pictureDiv">
-            <div class="col-xs-2 col-sm-3 col-md-4 col-lg-4">
-                <p></p>
+    <div class="container-fluid">
+       <section class="hero">
+          <div class="row intro">
+            <div class="columns">
+              <div class="my-img"></div>
+              <h1>Shivangi Das</h1>
             </div>
-            <div class="col-xs-8 col-sm-6 col-md-4 col-lg-4">
-                <p><img src="../images/image2.jpg" alt="Shivangi" class="img-circle img-thumbnail img-responsive" width="100%" height="100%" /></p>
+            <div class="columns">
+              <h2>Web Developer &middot; Loves Books</h2>
             </div>
-            <div class="col-xs-2 col-sm-3 col-md-4 col-lg-4">
-                <p></p>
-            </div>
-        </div>
-
-        <div class="row JumbotronPara">
-            <div class="col-xs-12 col-sm-12 col-md-12">
-
-                <div class="jumbotron">
-                    <h2><center>Shivangi Das</center></h2>
-                    <h5><center><p>Web Developer&nbsp;&middot;&nbsp;Avid Reader&nbsp;&middot;&nbsp;Aspiring Writer</p></center></h5>
-                </div>
-
-            </div>
-        </div>
-    </div>
-    <div class="push">        
+            <div class="portfolio"><a href="http://www.myexperiments.in/Experience.html">Go to my portfolio</a></div>
+          </div>
+          
+        </section>
     </div>
     <footer class="container-fluid" text-center">
         <footer-div></footer-div>
