--- a/htmls/footer-div.html
+++ b/htmls/footer-div.html
@@ -11,6 +11,7 @@
                 <a href="https://www.facebook.com/shivangi.das.710" target="_blank" id="facebook" data-toggle="tooltip" title="Facebook"><i class="icon-facebook2" aria-hidden="true"></i></a>           
                 <a href="https://twitter.com/iShivangiDas" target="_blank" id="twitter" data-toggle="tooltip" title="Twitter"><i class="icon-twitter" aria-hidden="true"></i></a>
                 <a href="http://shivangidas.blogspot.in/" target="_blank" id="blogger" data-toggle="tooltip" title="Blogger"><i class="icon-blogger2" aria-hidden="true"></i></a>
+                <!-- <a href="https://codepen.io/ShivangiDas7/" target="_blank" id="codepen" data-toggle="tooltip" title="Codepen"><i class="icon-codepen" aria-hidden="true"></i></a> -->
             </div>
             <div class="" id="copyright">
                 <span>Copyright</span>&nbsp;<span class="glyphicon glyphicon-copyright-mark"></span>
