--- a/htmls/footer-div.html
+++ b/htmls/footer-div.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" type="text/css" href="../icomoon/style.css">
 <div class="footnote">
     <center>
-            <img src="../images/image1.png" alt="Shivangi"  class="img-circle img-responsive" />
+            <!-- <img src="../images/image1.png" alt="Shivangi"  class="img-circle img-responsive" /> -->
             <article>Front End Web Developer<!-- . <a href="mailto:catchshivangi@gmail.com">Hire me</a> --></article>
              <div class="" id="contactIcons">
             
@@ -11,11 +11,11 @@
                 <a href="https://www.facebook.com/shivangi.das.710" target="_blank" id="facebook" data-toggle="tooltip" title="Facebook"><i class="icon-facebook2" aria-hidden="true"></i></a>           
                 <a href="https://twitter.com/iShivangiDas" target="_blank" id="twitter" data-toggle="tooltip" title="Twitter"><i class="icon-twitter" aria-hidden="true"></i></a>
                 <a href="http://shivangidas.blogspot.in/" target="_blank" id="blogger" data-toggle="tooltip" title="Blogger"><i class="icon-blogger2" aria-hidden="true"></i></a>
-                <!-- <a href="https://codepen.io/ShivangiDas7/" target="_blank" id="codepen" data-toggle="tooltip" title="Codepen"><i class="icon-codepen" aria-hidden="true"></i></a> -->
+                <a href="https://codepen.io/ShivangiDas7/" target="_blank" id="codepen" data-toggle="tooltip" title="CodePen"><i class="icon-codepen" aria-hidden="true"></i></a>
             </div>
             <div class="" id="copyright">
-                <span>Copyright</span>&nbsp;<span class="glyphicon glyphicon-copyright-mark"></span>
-                <span>2016</span>
+                <span>Shivangi Das</span>&nbsp;<span class="glyphicon glyphicon-copyright-mark"></span>
+                <span>2016-17</span>
             </div>
     </center>
 </div>
