--- a/htmls/Experience.html
+++ b/htmls/Experience.html
@@ -153,6 +153,27 @@
                         <div class="col-xs-12" style="padding:1em;"></div>
 
                         <center>
+                            <h3>{{company.company[3].fullname5}}</h3>
+                            <h5>{{company.company[3].duration5}}</h5>
+                        </center>
+                        <div class="col-xs-12" style="padding:1em;"></div>
+                        <div class="col-xs-12">
+                            <div class="responsibility col-lg-6 col-md-6 col-sm-5 col-xs-12">
+                                <h4>{{company.company[3].project5}}</h4>
+                            </div>
+                            <div class="responsibilityDes col-lg-6 col-md-6 col-sm-7 col-xs-12">
+                                <h5>{{company.company[3].language5}}</h5>
+                                <p>{{company.company[3].complexity5}}<br>
+                                <a href="http://www.myexperiments.in/my3Dpage.html" target="_blank"><strong>
+                                    Find it here.
+                                </strong></a><br>
+
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-xs-12" style="padding:1em;"></div>
+
+                        <center>
                             <h3>{{company.company[3].fullname4}}</h3>
                             <h5>{{company.company[3].duration4}}</h5>
                         </center>
@@ -164,8 +185,8 @@
                             <div class="responsibilityDes col-lg-6 col-md-6 col-sm-7 col-xs-12">
                                 <h5>{{company.company[3].language4}}</h5>
                                 <p>{{company.company[3].complexity4}}<br>
-                                <a href="http://codepen.io/ShivangiDas7/full/NdaVGE/" target="_blank"><strong>Rotating cube <span class="glyphicon glyphicon-link"></span></strong></a><br>
-                                <a href="https://codepen.io/ShivangiDas7/full/OWjqEb/" target="_blank"><strong>Weather App <span class="glyphicon glyphicon-link"></span></strong></a>
+                                <a href="http://codepen.io/ShivangiDas7/full/NdaVGE/" target="_blank"><strong>Rotating cube <i class="icon-codepen" aria-hidden="true"></i></strong></a><br>
+                                <a href="https://codepen.io/ShivangiDas7/full/OWjqEb/" target="_blank"><strong>Weather App <i class="icon-codepen" aria-hidden="true"></i></strong></a>
                                 </p>
                             </div>
                         </div>
